# vehicle-insurance-mlops-platform

./: LICENSE  README.md  demo.py  projectflow.txt  pyproject.toml  requirements.txt  setup.py  template.py
notebook/: MongoDB_Connection_Testing.ipynb  Vehicle_Insurance_Claim_Prediction.ipynb
src/components/: data_ingestion.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: vehicle_insurance.py
